{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 13,
  "lineage": "fc5e7b77-457b-877e-80bf-25d943f9fbb9",
  "resources": [
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:590183683594:instance/i-0b32f85aa737c99b4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b32f85aa737c99b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKeyPat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079440391a243fa0c",
            "private_dns": "ip-10-0-2-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017b4a1e5f8ccb1bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047764940d9c14434",
            "tags": {
              "Name": "Patrick_Private_VM"
            },
            "tags_all": {
              "Name": "Patrick_Private_VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0878015ab97b140d6"
            ]
          },
          "dependencies": [
            "module.vpc1.aws_security_group.private_security_group",
            "module.vpc1.aws_subnet.private_subnet",
            "module.vpc1.aws_subnet.public_subnet",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:590183683594:instance/i-0fd5ada2a6fc3894a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd5ada2a6fc3894a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKeyPat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038a24ea926f2f194",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_ip": "3.89.255.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a360e7b59ab90a49",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b389ae2fb1139892",
            "tags": {
              "Name": "Patrick_Public_VM"
            },
            "tags_all": {
              "Name": "Patrick_Public_VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a55bae0711607fbe"
            ]
          },
          "dependencies": [
            "module.vpc1.aws_security_group.public_security_group",
            "module.vpc1.aws_subnet.public_subnet",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:internet-gateway/igw-013565efee80e063a",
            "id": "igw-013565efee80e063a",
            "owner_id": "590183683594",
            "tags": {
              "Name": "patrick_internet_gw"
            },
            "tags_all": {
              "Name": "patrick_internet_gw"
            },
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:route-table/rtb-0d50de158b6e00516",
            "id": "rtb-0d50de158b6e00516",
            "owner_id": "590183683594",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:route-table/rtb-00037e167de0d1583",
            "id": "rtb-00037e167de0d1583",
            "owner_id": "590183683594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013565efee80e063a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.gw",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0366bacab5a8cf0b0",
            "route_table_id": "rtb-0d50de158b6e00516",
            "subnet_id": "subnet-047764940d9c14434"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.private_route",
            "module.vpc1.aws_subnet.private_subnet",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02515d74b41a65436",
            "route_table_id": "rtb-00037e167de0d1583",
            "subnet_id": "subnet-0b389ae2fb1139892"
          },
          "dependencies": [
            "module.vpc1.aws_internet_gateway.gw",
            "module.vpc1.aws_route_table.public_route",
            "module.vpc1.aws_subnet.public_subnet",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:security-group/sg-0878015ab97b140d6",
            "description": "Allow traffic on private VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0878015ab97b140d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "TLS from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_private_traffic",
            "name_prefix": "",
            "owner_id": "590183683594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_private_traffic"
            },
            "tags_all": {
              "Name": "allow_private_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_subnet.public_subnet",
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:security-group/sg-0a55bae0711607fbe",
            "description": "Allow traffic on public VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a55bae0711607fbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_public_traffic",
            "name_prefix": "",
            "owner_id": "590183683594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_public_traffic"
            },
            "tags_all": {
              "Name": "allow_public_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:subnet/subnet-047764940d9c14434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047764940d9c14434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183683594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:subnet/subnet-0b389ae2fb1139892",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b389ae2fb1139892",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183683594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-07329fd3fa7721d49"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183683594:vpc/vpc-07329fd3fa7721d49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099fce12a4bef5d3e",
            "default_route_table_id": "rtb-0f8b5d287b12fb503",
            "default_security_group_id": "sg-0aa42681b79391de6",
            "dhcp_options_id": "dopt-0b6aa08912eb87731",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07329fd3fa7721d49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8b5d287b12fb503",
            "owner_id": "590183683594",
            "tags": {
              "Name": "myvpcmodule-patrick"
            },
            "tags_all": {
              "Name": "myvpcmodule-patrick"
            }
          }
        }
      ]
    }
  ]
}